--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@ img{
     width: 50%;
     height: 2%;
 }
+.box{
+    position: relative;
+    left: 50%;
+    margin-top: 20px;
+    padding: 20px;
+    width : 200px;
+    height: 20px;
+    border: 2px solid black;
+    background-color: blue;
+    text-align: center;
+    border-radius: 5px;
+}
+.box a {
+    text-decoration: none;
+    color: white
+}
